--- a/.env.defaults
+++ b/.env.defaults
@@ -23,6 +23,9 @@ VDJ_GUEST_ACCOUNT=
 VDJ_GUEST_ACCOUNT_SECRET=
 VDJ_GUEST_ACCOUNT_JWT=
 
+# User admin accounts
+VDJ_USER_ADMINS=
+
 # VDJ Backbone Settings
 VDJ_BACKBONE_HOST=
 
