--- a/.env.defaults
+++ b/.env.defaults
@@ -60,6 +60,7 @@ SESSION_SECRET=
 RECAPTCHA_SECRET=
 RECAPTCHA_PUBLIC=
 ENABLE_JOB_QUEUES=false
+DISABLE_TAPIS_JOB=false
 
 # VDJ API Test Settings
 ALLOW_RECAPTCHA_SKIP=false
