--- a/.env.defaults
+++ b/.env.defaults
@@ -78,4 +78,4 @@ POSTFIX_RELAYPORT=
 
 # Dev Settings
 DEBUG_CONSOLE=false
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
+SLACK_WEBHOOK_URL=
